# routeeasy

./: .gitignore  CLAUDE.md  COMPLIANCE_FEATURE.md  MIGRATION_LOG.md  PRD.md  PROJECT_PLAN.md  README.md  TECHNICAL_SPEC.md  issues_faced.md  railway.json  test_application.md
backend/: pyproject.toml  requirements.txt  test_quota.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/agent/: callbacks.py  core.py  prompts.py  tools.py
backend/app/routers/: admin.py  admin_metrics.py  agent.py  auth.py  compliance.py  directions.py  history.py  rag.py  trips.py  voice.py
backend/app/services/: chroma_sync.py  compliance_service.py  directions_service.py  geocoding_service.py  groq_client.py  moderation_service.py  rag_service.py  trips_service.py  vector_service.py
backend/migrations/: 001_initial.sql  002_pgvector.sql  003_add_role_to_user_profiles.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatInput.jsx  Header.jsx  MessageBubble.jsx  ProtectedRoute.jsx  SaveTripModal.jsx  SemanticSearchBar.jsx  StopItem.jsx  StopList.jsx  TripCard.jsx  VoiceInputButton.jsx
frontend/src/screens/: AccountScreen.jsx  AdminDashboard.jsx  AuthCallbackScreen.jsx  AuthScreen.jsx  ChatScreen.jsx  CompleteProfileScreen.jsx  HistoryScreen.jsx  HomeScreen.jsx  LLMLogsScreen.jsx  LandingPage.jsx  PreviewScreen.jsx  StatsScreen.jsx  TripDetailScreen.jsx  TripsScreen.jsx
frontend/src/store/: authStore.js  chatStore.js  tripStore.js
frontend/tests/: test_trips.spec.js
