[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "chromadb==0.5.0",
    "fastapi==0.110.0",
    "fastembed>=0.7.4",
    "gotrue>=2.12.4",
    "groq==0.9.0",
    "httpx==0.27.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.12",
    "langchain-groq==0.3.1",
    "langsmith>=0.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.4.0",
    "pypdf>=6.8.0",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.22",
    "sentence-transformers==2.7.0",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.29",
    "supabase>=2.28.0",
    "uvicorn[standard]==0.29.0",
]
